Updated plugins descriptions and icons.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8159 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/7ZipBuilder/7ZipBuilder_9.vcproj
+++ b/plugins/7ZipBuilder/7ZipBuilder_9.vcproj
@@ -573,6 +573,10 @@
 				RelativePath=".\Class.rgs"
 				>
 			</File>
+			<File
+				RelativePath=".\icon.ico"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Generated Files"
