--- a/plugins/ImageViewer/ImageViewer_9.vcproj
+++ b/plugins/ImageViewer/ImageViewer_9.vcproj
@@ -569,6 +569,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\grabmove.cur"
+				>
+			</File>
+			<File
+				RelativePath=".\image.ico"
+				>
+			</File>
+			<File
 				RelativePath="ImageViewer.rgs"
 				>
 			</File>
