Updated Torrent Wizard utility (header logo, help URL, default tracker).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8179 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/TorrentWizard/TorrentWizard_9.vcproj
+++ b/TorrentWizard/TorrentWizard_9.vcproj
@@ -554,10 +554,6 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath="res\Hand.cur"
-				>
-			</File>
-			<File
 				RelativePath="res\TorrentWizard.ico"
 				>
 			</File>
@@ -574,7 +570,7 @@
 				>
 			</File>
 			<File
-				RelativePath="Res\Wizard.bmp"
+				RelativePath="..\shareaza\Res\Wizard.bmp"
 				>
 			</File>
 		</Filter>
