Search Export plugin beta (added separate installer and default template).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8187 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/SearchExport/SearchExport.vcproj
+++ b/plugins/SearchExport/SearchExport.vcproj
@@ -555,6 +555,14 @@
 				</FileConfiguration>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\SearchExport_32.nsi"
+			>
+		</File>
+		<File
+			RelativePath=".\SearchExport_64.nsi"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
