Changed security window list images from single bitmap to separate icons (32-bit colors, skinable).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8197 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -114,6 +114,7 @@ IDI_PAINTBRUSHES        ICON                    "Res\\Paintbrushes.ICO"
 IDI_COLLECTION          ICON                    "Res\\Collection.ico"
 IDI_COLLECTION_MASK     ICON                    "Res\\CollectionMask.ico"
 IDI_FIREWALLED          ICON                    "Res\\Firewalled.ico"
+IDI_GRANTED             ICON                    "Res\\Granted.ico"
 IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 IDI_COLORS              ICON                    "res\\colors.ico"
 IDI_UPDOWN_ARROW        ICON                    "Res\\UpDownArrow.ico"
@@ -192,7 +193,6 @@ IDB_SORT_ASC            BITMAP                  "Res\\SortAsc.bmp"
 IDB_SORT_DESC           BITMAP                  "Res\\SortDesc.bmp"
 IDB_COLOURDOT           BITMAP                  "Res\\ColourDot.bmp"
 IDB_WIZARD              BITMAP                  "Res\\Wizard.bmp"
-IDB_SECURITY            BITMAP                  "Res\\Security.bmp"
 IDB_SMALL_STAR          BITMAP                  "Res\\SmallStar.bmp"
 IDB_BANNER_MARK         BITMAP                  "Res\\BannerMark.bmp"
 IDB_MEDIA_STATES        BITMAP                  "Res\\mediaStates.bmp"
