--- a/plugins/WindowsThumbnail/WindowsThumbnail.rc
+++ b/plugins/WindowsThumbnail/WindowsThumbnail.rc
@@ -30,8 +30,8 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ FILEVERSION 1,0,0,2
+ PRODUCTVERSION 2,5,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -47,14 +47,14 @@ BEGIN
         BLOCK "000004b0"
         BEGIN
             VALUE "Comments", "Uses Windows thumbnails as Shareaza thumbnails."
-            VALUE "CompanyName", "Nikolay Raspopov"
+            VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Windows Thumbnail plugin for Shareaza"
-            VALUE "FileVersion", "1, 0, 0, 1"
+            VALUE "FileVersion", "1, 0, 0, 2"
             VALUE "InternalName", "WindowsThumbnail.exe"
-            VALUE "LegalCopyright", "Copyiright (C) Nikolay Raspopov, 2009."
+            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2009. All rights reserved."
             VALUE "OriginalFilename", "WindowsThumbnail.exe"
-            VALUE "ProductName", "Windows Thumbnail plugin for Shareaza"
-            VALUE "ProductVersion", "1, 0, 0, 1"
+            VALUE "ProductName", "Shareaza"
+            VALUE "ProductVersion", "2, 5, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
