--- a/plugins/GFLImageServices/GFLImageServices_9.vcproj
+++ b/plugins/GFLImageServices/GFLImageServices_9.vcproj
@@ -583,6 +583,10 @@
 				RelativePath=".\GFLReader.rgs"
 				>
 			</File>
+			<File
+				RelativePath=".\icon.ico"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Generated Files"
