Fixed Skin Installer manifest.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8278 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/skin-installer/Skin_9.vcproj
+++ b/skin-installer/Skin_9.vcproj
@@ -46,6 +46,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="../zlib"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;NOCRYPT;ZLIB_DLL;ZLIB_WINAPI;_CRT_SECURE_NO_DEPRECATE"
+				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				EnableFunctionLevelLinking="true"
@@ -68,7 +69,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\shareaza\zlib"
+				AdditionalLibraryDirectories=""
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				TargetMachine="1"
@@ -79,7 +81,6 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -128,6 +129,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="../zlib"
 				PreprocessorDefinitions="WIN64;_DEBUG;_WINDOWS;NOCRYPT;ZLIB_DLL;ZLIB_WINAPI;_CRT_SECURE_NO_DEPRECATE"
+				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				RuntimeTypeInfo="false"
@@ -149,7 +151,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\shareaza\zlib"
+				AdditionalLibraryDirectories=""
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				TargetMachine="17"
@@ -159,7 +162,6 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -210,10 +212,10 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="../zlib"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;NOCRYPT;ZLIB_DLL;ZLIB_WINAPI;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
+				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="false"
 				WarningLevel="4"
@@ -233,7 +235,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\shareaza\zlib"
+				AdditionalLibraryDirectories=""
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -247,7 +250,6 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -299,10 +301,10 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="../zlib"
 				PreprocessorDefinitions="WIN64;NDEBUG;_WINDOWS;NOCRYPT;ZLIB_DLL;ZLIB_WINAPI;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
+				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="false"
 				WarningLevel="4"
@@ -322,7 +324,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\shareaza\zlib"
+				AdditionalLibraryDirectories=""
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -335,7 +338,6 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -392,10 +394,6 @@
 			>
 			<File
 				RelativePath="..\skin-installer\resource.h"
-				>
-			</File>
-			<File
-				RelativePath="..\skin-installer\resrc1.h"
 				>
 			</File>
 			<File
