--- a/plugins/Preview/Preview.rc
+++ b/plugins/Preview/Preview.rc
@@ -81,18 +81,19 @@ IDD_CONFIGDLG DIALOGEX 0, 0, 320, 210
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,188,188,60,16
-    PUSHBUTTON      "Cancel",IDCANCEL,254,188,60,16
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_AUTOARRANGE | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,6,6,280,86
-    PUSHBUTTON      "+",IDC_ADD,294,6,20,16,BS_ICON
-    PUSHBUTTON      "-",IDC_DEL,294,28,20,16,BS_ICON
-    EDITTEXT        IDC_EXT,18,125,150,13,ES_AUTOHSCROLL
-    EDITTEXT        IDC_COMMAND,18,158,262,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,187,187,60,16
+    PUSHBUTTON      "Cancel",IDCANCEL,253,187,60,16
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_AUTOARRANGE | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,279,86
+    PUSHBUTTON      "+",IDC_ADD,293,7,20,16,BS_ICON
+    PUSHBUTTON      "-",IDC_DEL,293,28,20,16,BS_ICON
+    EDITTEXT        IDC_EXT,21,126,150,13,ES_AUTOHSCROLL
+    EDITTEXT        IDC_COMMAND,21,158,258,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_BROWSE,286,157,20,16
-    LTEXT           "Application command line (use %1 as input and %2 as output file name):",IDC_STATIC,12,145,233,8
-    LTEXT           "Handled file extensions (separated by spaces):",IDC_STATIC,12,111,152,8
-    GROUPBOX        "Handler:",IDC_STATIC,6,97,308,84
-    ICON            IDI_ICON,IDC_STATIC,278,110,21,20,SS_REALSIZEIMAGE
+    PUSHBUTTON      "Get More",IDC_WEB,7,187,60,16
+    LTEXT           "Command line (use %1 as input and %2 as output file name):",IDC_STATIC,14,144,198,8
+    LTEXT           "File extensions (separated by spaces):",IDC_STATIC,14,112,125,8
+    GROUPBOX        "Handler:",IDC_STATIC,7,97,306,82
+    ICON            IDI_ICON,IDC_STATIC,278,109,21,20,SS_REALSIZEIMAGE
 END
 
 
@@ -106,12 +107,13 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_CONFIGDLG, DIALOG
     BEGIN
-        LEFTMARGIN, 6
-        RIGHTMARGIN, 314
-        VERTGUIDE, 12
-        VERTGUIDE, 18
-        TOPMARGIN, 6
-        BOTTOMMARGIN, 204
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 313
+        VERTGUIDE, 14
+        VERTGUIDE, 21
+        VERTGUIDE, 306
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 203
     END
 END
 #endif    // APSTUDIO_INVOKED
