--- a/skin-installer/Skin_9.vcproj
+++ b/skin-installer/Skin_9.vcproj
@@ -50,6 +50,8 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				EnableFunctionLevelLinking="true"
+				EnableEnhancedInstructionSet="1"
+				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				WarningLevel="4"
 				DebugInformationFormat="4"
@@ -132,6 +134,7 @@
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
+				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				WarningLevel="4"
 				DebugInformationFormat="3"
@@ -210,13 +213,15 @@
 				Optimization="3"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
-				FavorSizeOrSpeed="1"
+				FavorSizeOrSpeed="2"
 				OmitFramePointers="true"
 				AdditionalIncludeDirectories="../zlib"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;NOCRYPT;ZLIB_DLL;ZLIB_WINAPI;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="1"
+				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				WarningLevel="4"
 				DisableSpecificWarnings="4100"
@@ -306,6 +311,7 @@
 				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
+				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				WarningLevel="4"
 				DisableSpecificWarnings="4100"
